tests/ui/sized-hierarchy/default-bound.stderr
error: relaxing a default bound is disallowed in Rust Future
  --> $DIR/default-bound.rs:13:17
   |
LL | fn neg_sized<T: ?Sized>() {}
   |                 ^^^^^^ help: replace `?Sized` with `MetaSized`: `MetaSized`
   |
   = help: `?Sized` is equivalent to a `std::marker::MetaSized` bound

error: relaxing a default bound is disallowed in Rust Future
  --> $DIR/default-bound.rs:19:21
   |
LL | fn neg_metasized<T: ?MetaSized>() {}
   |                     ^^^^^^^^^^

error: relaxing a default bound is disallowed in Rust Future
  --> $DIR/default-bound.rs:25:24
   |
LL | fn neg_pointeesized<T: ?PointeeSized>() { }
   |                        ^^^^^^^^^^^^^

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/default-bound.rs:32:12
   |
LL |     bare::<[u8]>();
   |            ^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by an implicit `Sized` bound in `bare`
  --> $DIR/default-bound.rs:8:9
   |
LL | fn bare<T>() {}
   |         ^ required by the implicit `Sized` requirement on this type parameter in `bare`
help: consider relaxing the implicit `Sized` restriction
   |
LL | fn bare<T: ?Sized>() {}
   |          ++++++++

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/default-bound.rs:34:13
   |
LL |     sized::<[u8]>();
   |             ^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `sized`
  --> $DIR/default-bound.rs:11:13
   |
LL | fn sized<T: Sized>() {}
   |             ^^^^^ required by this bound in `sized`

error[E0277]: the size for values of type `main::Foo` cannot be known at compilation time
  --> $DIR/default-bound.rs:45:12
   |
LL |     bare::<Foo>();
   |            ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `main::Foo`
note: required by an implicit `Sized` bound in `bare`
  --> $DIR/default-bound.rs:8:9
   |
LL | fn bare<T>() {}
   |         ^ required by the implicit `Sized` requirement on this type parameter in `bare`
help: consider relaxing the implicit `Sized` restriction
   |
LL | fn bare<T: ?Sized>() {}
   |          ++++++++

error[E0277]: the size for values of type `main::Foo` cannot be known at compilation time
  --> $DIR/default-bound.rs:47:13
   |
LL |     sized::<Foo>();
   |             ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `main::Foo`
note: required by a bound in `sized`
  --> $DIR/default-bound.rs:11:13
   |
LL | fn sized<T: Sized>() {}
   |             ^^^^^ required by this bound in `sized`

error[E0277]: the size for values of type `main::Foo` cannot be known
  --> $DIR/default-bound.rs:49:17
   |
LL |     metasized::<Foo>();
   |                 ^^^ doesn't have a known size
   |
   = help: the trait `MetaSized` is not implemented for `main::Foo`
note: required by a bound in `metasized`
  --> $DIR/default-bound.rs:17:17
   |
LL | fn metasized<T: MetaSized>() {}
   |                 ^^^^^^^^^ required by this bound in `metasized`

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0277`.
